--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div>
-      <h1>Welcome to Outliners application</h1>
+      <h1>Welcome to Outliners Team Sidd application </h1>
     {{{body}}}
 </div>
 <div>
